demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
spec:
  containers:
    - name: busybox-demo
      image: busybox
      args:
        [
          /bin/sh,
          -c,
          'i=0; while true; do echo "Hello"; sleep 10; done',
        ]
