selenium-hub-deployement-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/dashboard)$ $1/ redirect;
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: my-selenium-grid.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selenium-hub-deployment
                port:
                  number: 4444
